fix: add max-height to dropdown so that the overflow works as expected

--- a/src/features/Search/components/DesktopSearchBar/DesktopSearchBar.module.scss
+++ b/src/features/Search/components/DesktopSearchBar/DesktopSearchBar.module.scss
@@ -59,6 +59,7 @@
 			gap: 3rem;
 			padding: 1rem;
 
+			max-height: 100dvh;
 			overflow-y: auto;
 
 			background-color: white;
